Record the Unsafe-free enum append spike on JBR as evaluated and deferred
Measured on JBR 25.0.2 with -XX:+AllowEnhancedClassRedefinition: a
redefinition that strips ACC_FINAL from the enum's static fields, adds
the new constant's field and adds an init method is accepted; the
injected method built the constant through the real constructor, grew
$VALUES with a plain PUTSTATIC, and after clearing the two Class
caches reflectively values() and valueOf() answered correctly, with
Field.set working on the definalised $VALUES. Stock SapMachine 21
refuses the same redefinition with 'attempted to change the schema
(add/remove fields)'.

Deferred: the injected initialiser must carry only the appended
constants, which for enums with constructor arguments means slicing
their construction out of <clinit> bytecode, plus a second
redefinition pass in both engines. JDK 26 continuity is already
covered by the launcher flag the plugin now writes.